--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
     <h1>This is index page</h1>
+    <img src="https://i.pinimg.com/originals/86/90/14/869014ea87e157354d2326a5961b20e0.png" height="80px">
 </body>
 </html>
