--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
         <lable for="password">Enter password</lable>
         <input type="password" id="passsword"/>
     </form>
+    <ul>
+        <li>Apple</li>
+        <li>Orange</li>
+        <li>Mango</li>
+      </ul>
 </body>
 </html>
